--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: ^0.18.1
   flutter_launcher_icons: ^0.11.0
   rename: ^3.0.0
+  shimmer: ^3.0.0
   flutter:
     sdk: flutter
 
