--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,28 +31,29 @@ dependencies:
   responsive_framework: ^0.2.0
   iconly: ^1.0.1
   provider: ^6.0.5
-  cached_network_image: ^3.2.3
-  firebase_core: ^2.9.0
+  cached_network_image: ^3.3.1
+  firebase_core: ^3.4.0
+  firebase_database: ^11.1.1
   url_launcher: ^6.1.10
-  firebase_database: ^10.1.0
-  dropdown_button2: ^1.7.2
+  dropdown_button2: ^2.3.9
   geolocator: ^9.0.2
   google_maps_flutter: ^2.1.3
   expandable_page_view: ^1.0.17
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.0
   progress_indicators: ^1.0.0
-  cloud_firestore: ^4.8.4
+  cloud_firestore: ^5.4.0
   fluttertoast: ^8.0.8
   another_flushbar: ^1.12.30
   animated_size_and_fade: ^2.0.0
   image_picker: ^1.0.4
-  firebase_storage: ^11.2.7
+  firebase_storage: ^12.2.0
   dotted_line: ^3.2.2
   intl: ^0.18.1
   flutter_launcher_icons: ^0.11.0
   rename: ^3.0.0
   shimmer: ^3.0.0
+  win32: ^5.5.3
   flutter:
     sdk: flutter
 
